# langpa

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  cnmf_factor_cluster_top_genes_200.csv  coverage.xml  pyproject.toml  tmp.json  tmp.txt  tmp_reorganize_ds_auto.py
.githooks/: pre-commit
20251212_121027/: deepsearch.json  deepsearch_structured.json
langpa/: pyproject.toml
langpa/src/langpa/: __init__.py
langpa/src/langpa/agents/ontology_mapping/: __init__.py  agent.py  config.py  models.py  tools.py
langpa/src/langpa/graphs/: definitions.py
langpa/src/langpa/schemas/: __init__.py  deepsearch_results_schema_enriched.json  workflow_output.schema.json
langpa/src/langpa/services/: __init__.py  deepsearch_configs.py  deepsearch_prompts.py  deepsearch_service.py  deepsearch_validator.py  markdown_citation_extractor.py  markdown_reporter.py  ontology_enrichment.py  output_manager.py  pydantic_models.py
langpa/src/langpa/utils/: csv_batch_parser.py  readme_generator.py
langpa/tests/: conftest.py
langpa/tests/fixtures/cached_responses/: README.md
langpa/tests/integration/: test_compact_references_integration.py  test_deepsearch_api.py  test_markdown_reporter_integration.py  test_pydantic_validation_e2e.py
langpa/tests/unit/: test_cache_manager.py  test_deepsearch_service.py  test_deepsearch_validator.py  test_markdown_citation_extractor.py  test_markdown_reporter.py  test_output_container.py  test_output_manager.py  test_output_manager_extensions.py  test_pydantic_models.py  test_run_deepsearch.py  test_run_deepsearch_dry_run.py
langpa/tests/utils/: test_output_saver.py
langpa_validation_tools/: README.md  pyproject.toml
langpa_validation_tools/src/langpa_validation_tools/: __init__.py  cli.py
langpa_validation_tools/src/langpa_validation_tools/analysis/: __init__.py  embedding_workflow.py  run_comparison.py
langpa_validation_tools/src/langpa_validation_tools/comparison/: __init__.py  matching.py  metrics.py  models.py
langpa_validation_tools/src/langpa_validation_tools/embeddings/: __init__.py  cache.py  generator.py  similarity.py
langpa_validation_tools/src/langpa_validation_tools/reporting/: __init__.py  master_report.py
langpa_validation_tools/src/langpa_validation_tools/visualization/: __init__.py  heatmaps.py
langpa_validation_tools/tests/: conftest.py
langpa_validation_tools/tests/integration/: test_comparison_e2e.py  test_embeddings_api.py  test_run_comparison_e2e.py  test_visualization_e2e.py
langpa_validation_tools/tests/unit/: test_comparison_matching.py  test_comparison_metrics.py  test_comparison_models.py  test_embedding_workflow.py  test_embeddings_cache.py  test_embeddings_generator.py  test_embeddings_similarity.py  test_heatmaps.py  test_run_comparison.py
(+493 files in other folders)
